--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     <section id="languages">
       <div class="container">
         <div class="row">
-          <h1 id="section__title">This is my <span class="text--purple">technology stack</span></h1>
+          <h1 id="section__title">
+            This is my <span class="text--purple">technology stack</span>
+          </h1>
           <div class="language__list">
             <div class="language">
               <figure class="language__img--wrapper">
@@ -117,7 +119,7 @@
               <span class="language__name">HTML</span>
             </div>
             <div class="language">
-              <figure  class="language__img--wrapper">
+              <figure class="language__img--wrapper">
                 <img
                   src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/1200px-HTML5_Badge.svg.png"
                   alt=""
@@ -173,23 +175,41 @@
     <section id="projects">
       <div class="container">
         <div class="row">
-          <h1 class="section__title">Here are some of my <span class="text--purple">projects</span></h1>
+          <h1 class="section__title">
+            Here are some of my <span class="text--purple">projects</span>
+          </h1>
           <ul class="project__list">
             <li class="project">
               <div class="project__wrapper">
-                <img src="./Assets/assets/loopit.png" class="project__img" alt="Car subscription project">
+                <img
+                  src="./Assets/assets/loopit.png"
+                  class="project__img"
+                  alt="Car subscription project"
+                />
                 <div class="project__description">
                   <h3 class="project__description--title">Car Sales Project</h3>
                   <h4 class="project__description--sub-title">
                     HTML, CSS, JavaScript, React
                   </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consectetur at asperiores maxime, culpa natus fugiat nulla
+                    sit aperiam dolore repudiandae fugit provident quam? Tempora
+                    porro cum neque obcaecati velit ea?
+                  </p>
+                  <div class="project__description--links">
+                    <a href="" class="project__description--link" target="_blank">
+                      <i class="fab fa-github"></i>
+                    <a href="" class="project__description--link" target="_blank">
+                      <i class="fab fa-github"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </li>
           </ul>
         </div>
       </div>
-
     </section>
   </body>
 </html>
